--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry,places&ext=.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+</head>
+<body>
+	<div><h1>HELLO, WORLD</h1></div>
+	<div id="map" style="border: 2px solid #3872ac;"></div>
+	
+</body>
+</html>
