--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry,places&ext=.js"></script>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAtfv0owVcgr4Rlj3WTzIOqHO_9Z6nOg-o"></script>
 	<script type="text/javascript" src="script2.js"></script>
 </head>
 <body>
