--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 	<script type="text/javascript" src="script2.js"></script>
 </head>
 <body>
-	<div><h1>Hello guest, here is list of famous restaurant in Helsinki</h1></div>
-	<div id="ordered">abc</div>
+	<div><h1>Hello guest, here is list of famous restaurants in Helsinki</h1></div>
 	<div id="map" style="border: 2px solid #3872ac;"></div>
 	
 </body>
